Address copilot comments